fix header z-index

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body:before {
 	max-width: 100%;
 	height: auto;
 	background-color: white;
-	z-index: 1;
+	z-index: 2;
 	box-shadow: 0 0 10px rgba(0,0,0,.1);
 }
 .site .sidebar .site-header {
